--- a/index.html
+++ b/index.html
@@ -6,20 +6,32 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ashish Jha || Home</title>
+  <title>Ashish Jha | 😎</title>
   <!-- font-awesome -->
   <link href="./Ashish Jha __ Home_files/all.min.css" rel="stylesheet">
   <!-- css -->
   <link href="./Ashish Jha __ Home_files/styles.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <!-----Fevicon----->
-  <link rel="apple-touch-icon" sizes="180x180" href="https://ashishjha.co.in/fevicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://ashishjha.co.in/fevicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://ashishjha.co.in/fevicon/favicon-16x16.png">
-  <link rel="manifest" href="https://ashishjha.co.in/fevicon/site.webmanifest">
+   <link rel="apple-touch-icon" sizes="180x180" href="./Ashish Jha __ Home_files/logo.webp">
+  <link rel="icon" type="image/png" sizes="32x32" href="./Ashish Jha __ Home_files/logo.webp">
+  <link rel="icon" type="image/png" sizes="16x16" href="./Ashish Jha __ Home_files/logo.webp">
+  <link rel="manifest" href="./Ashish Jha __ Home_files/site.webmanifest">
 </head>
 <!-- Style -->
 <style>
+  .hero,.nav{
+    background-color: #f4f2ee;
+  }
+  .nav-logo {
+    border-radius: 50%;
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .nav-logo:hover {
+    transform: scale(1.25);
+  }
   .hero-photos{
     max-width: 25rem;
     height: 35rem;
@@ -47,7 +59,13 @@
     transform: translateY(0);
   }
 }
+.social-icon {
+      transition: transform 0.3s ease-in-out;
+    }
 
+    .social-icon:hover {
+      transform: scale(1.2);
+    }
  
 </style>
 
@@ -57,7 +75,7 @@
     <div class="nav-center">
       <!-- nav header -->
       <div class="nav-header">
-        <a href="https://ashishjha.co.in/"><img src="./Ashish Jha __ Home_files/logo.svg" class="nav-logo"
+        <a href="https://ashishjha.co.in/"><img src="./Ashish Jha __ Home_files/logo.webp" width="60px" height="60px" class="nav-logo"
             alt="nav logo"></a>
         <button class="nav-btn" id="nav-btn">
           <i class="fas fa-bars"></i>
@@ -143,33 +161,23 @@
     <div class="section-center hero-center">
       <article class="hero-info">
         <div class="underline"></div>
-        <h1>i'm ashish</h1>
-        <h4>A Full stack developer and UI/UX enthusiast</h4>
+        <h1>Hi, I'm Ashish Jha</h1>
+        <h4>Simplifying Complexity with Elegant Code.</h4>
 
         <!-- social icons -->
         <ul class="social-icons hero-icons">
           <li class="index-neumorph">
-            <a href="https://github.com/ashishjha" class="social-icon" target="_blank">
+            <a href="https://github.com/Ashjha75" class="social-icon" target="_blank">
               <i class="fab fa-github"></i>
             </a>
           </li>
           <li class="index-neumorph">
-            <a href="https://www.linkedin.com/in/ashish-jha-922a4a175/" class="social-icon" target="_blank">
+            <a href="https://www.linkedin.com/in/ashish-jha-890ab3206/" class="social-icon" target="_blank">
               <i class="fab fa-linkedin"></i>
             </a>
           </li>
           <li class="index-neumorph">
-            <a href="https://www.facebook.com/ashish6399/" class="social-icon" target="_blank">
-              <i class="fab fa-facebook"></i>
-            </a>
-          </li>
-          <li class="index-neumorph">
-            <a href="https://www.instagram.com/the_ashish.jha/" class="social-icon" target="_blank">
-              <i class="fab fa-instagram"></i>
-            </a>
-          </li>
-          <li class="index-neumorph">
-            <a href="https://twitter.com/JhaAshish_Dev" class="social-icon" target="_blank">
+            <a href="https://x.com/AshishJha57" class="social-icon" target="_blank">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
@@ -184,18 +192,14 @@
   <!-- about -->
   <section class="section about">
     <div class="section-center about-center">
-      <!-- about img -->
       <article class="about-img">
         <img src="./Ashish Jha __ Home_files/ashishj.jpg" class="hero-photos" alt="about img">
       </article>
-      <!-- about info -->
       <article class="about-info">
-        <!-- section title -->
         <div class="section-title about-title">
           <h2>about</h2>
           <div class="underline"></div>
         </div>
-        <!--end of section title -->
         <p>
           Hello! I’m Ashish Jha, and I love building efficient, scalable web applications that solve real-world
           problems. My journey into web development started with a curiosity for how dynamic websites work, and I’ve
@@ -212,28 +216,17 @@
           Boot to deliver seamless, data-driven products. I’m constantly expanding my skill set and adapting to new
           technologies to stay ahead in this fast-evolving field.
         </p>
-        <!-- <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quae,
-            eum maiores est enim earum fugiat aspernatur. Fuga qui iste amet
-            reiciendis possimus rerum omnis recusandae molestias error
-            consequuntur, doloribus inventore reprehenderit officiis. Dolore
-            aut, repellendus eius fugiat numquam cumque.
-          </p> -->
+        
         <a class="btn" href="https://ashishjha.co.in/about">about me</a>
       </article>
     </div>
   </section>
-  <!-- end of about -->
-  <!-- services -->
   <section class="section bg-grey">
-    <!-- section title -->
     <div class="section-title">
       <h2>services</h2>
       <div class="underline"></div>
     </div>
-    <!--end of section title -->
     <div class="services-center section-center">
-      <!-- single service -->
       <article class="service">
         <i class="fab fa-sketch service-icon"></i>
         <h4>Front End</h4>
@@ -244,8 +237,6 @@
           Working alongside graphic designers for web design features.
         </p>
       </article>
-      <!-- end of single service -->
-      <!-- single service -->
       <article class="service">
         <i class="fas fa-code service-icon"></i>
         <h4>Backend</h4>
@@ -256,8 +247,6 @@
           project from conception to finished product.
         </p>
       </article>
-      <!-- end of single service -->
-      <!-- single service -->
       <article class="service">
         <i class="fas fa-database service-icon"></i>
         <h4>Database</h4>
