--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
 
 
   </script>
-  <script src="./Ashish Jha __ Home_files/app.js"></script>
+  <script src="./Ashish Jha __ Home_files/app.js.download"></script>
 
 </body>
 
