--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ashish Jha</title>
-  <!-- font-awesome -->
-  <link href="./Ashish Jha __ Home_files/all.min.css" rel="stylesheet">
+  git reset --soft HEAD~1  git reset --soft HEAD~1  git reset --soft HEAD~1  <link href="./Ashish Jha __ Home_files/all.min.css" rel="stylesheet">
   <!-- css -->
   <link href="./Ashish Jha __ Home_files/styles.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
